# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  chip8_cpu.c  chip8_cpu.h  chip8_graphics.c  chip8_graphics.h  chip8_memory.c  chip8_memory.h  chip8_textures.c  chip8_textures.h  main.c  utils.c  utils.h
